# drishti_hunter_test

./: .gitmodules  .travis.yml  CMakeLists.txt  FaceTrackerFactoryJson.cpp  FaceTrackerFactoryJson.h  README.md  README.rst  appveyor.yml  drishti-eye-test.cpp  drishti-face-test.cpp  drishti_stdlib_string.h
cmake/: upload.cmake
cmake/Hunter/: config.cmake
config/: default.json  logitech_c615.json  orbbec_astra_pro.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/eye/: CMakeLists.txt  drishti-eye-test.cpp
src/app/face/: CMakeLists.txt  FaceTrackerFactoryJson.cpp  FaceTrackerTest.cpp  FaceTrackerTest.h  VideoCaptureList.cpp  VideoCaptureList.h  drishti-face-test.cpp
src/app/face/config/: logitech_c615.json  orbbec_astra_pro.json
